--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <li><a href="#">WELCOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
-                <li><a href="#">WORK</a></li>
-                <li><a href="#">WORK</a></li>
-                <li><a href="#">WORK</a></li>
-                <li><a href="#">WORK</a></li>
+                <li><a href="#">WORK1</a></li>
+                <li><a href="#">WORK2</a></li>
+                <li><a href="#">WORK3</a></li>
+                <li><a href="#">WORK4</a></li>
             </ul>
             <button class="close_button"><img src="img/close_button.png" alt="닫기 버튼"></button>
         </div>
@@ -138,7 +138,9 @@
             <div class="container">
                 <div class="work1_box left">
                     <h3>WORK1</h3>
-                    <img src="img/box1.png" alt="사진">
+                    <div class="img">
+                        <img src="img/box1_babience.png" alt="사진">
+                    </div>
                     <ul>
                         <li class="txt">베비언스 홈페이지</li>
                         <li class="txt">리뉴얼&#32;&#183;&#32;반응형</li>
@@ -147,7 +149,7 @@
                         <li>디자인 100%</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
-                    <a href="web/babience/index.html">페이지보기</a>
+                    <a href="web/babience/index.html" target="_blank">페이지보기</a>
                     <div class="line3"></div>
                 </div> <!-- //work1_box  -->
             </div> <!-- //container  -->
@@ -157,7 +159,9 @@
             <div class="container">
                 <div class="work2_box right">
                     <h3>WORK2</h3>
-                    <img src="img/box1.png" alt="사진">
+                    <div class="img">
+                        <img src="img/box2_gabiacns.png" alt="사진">
+                    </div>
                     <ul>
                         <li class="txt">가비아 글로벌 홈페이지</li>
                         <li class="txt">클론코딩</li>
@@ -165,7 +169,7 @@
                         <li>퍼블리싱 100%</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
-                    <a href="web/babience/index.html">페이지보기</a>
+                    <a href="web/gabiacns/index.html" target="_blank">페이지보기</a>
                     <div class="line4"></div>
                 </div> <!-- //work2_box  -->
             </div> <!-- //container  -->
@@ -175,7 +179,9 @@
             <div class="container">
                 <div class="work3_box left">
                 <h3>WORK3</h3>
-                <img src="img/box1.png" alt="사진">
+                <div class="img">
+                    <img src="img/box1.png" alt="사진">
+                </div>
                 <ul>
                     <li class="txt">수업용 홈페이지</li>
                     <li class="txt">리뉴얼&#32;&#183;&#32;반응형</li>
@@ -184,7 +190,7 @@
                     <li>디자인 100%</li>
                     <li>HTML / CSS / JQUERY</li>
                 </ul>
-                <a href="web/babience/index.html">페이지보기</a>
+                <a href="web/babience/index.html" target="_blank">페이지보기</a>
                 <div class="line5"></div>
                 </div> <!-- //work3_box  -->
             </div> <!-- //container  -->
@@ -194,16 +200,17 @@
             <div class="container">
                 <div class="work4_box right">
                     <h3>WORK4</h3>
-                    <img src="img/box1.png" alt="사진">
+                    <div class="img">
+                        <img src="img/box4_jiran.png" alt="사진">
+                    </div>
                     <ul>
                         <li class="txt">수업용 홈페이지</li>
-                        <li class="txt">리뉴얼&#32;&#183;&#32;반응형</li>
+                        <li class="txt">클론코딩</li>
                         <li>제작기간 22.00.00 &#126; 22.00.00</li>
                         <li>퍼블리싱 100%</li>
-                        <li>디자인 100%</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
-                    <a href="web/babience/index.html">페이지보기</a>
+                    <a href="web/jiran/index.html" target="_blank">페이지보기</a>
                     <div class="line6"></div>
                 </div> <!-- //work4_box  -->
             </div> <!-- //container  -->
