--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
     <script src="js/rProgressbar-master/dist/js/jQuery.rProgressbar.min.js"></script>
+    <script src="js/jqFuwatto.umd.js"></script>
     <script src="js/main.js"></script>
 
 </head>
