--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/locomotive-scroll.min.css">
 
     <!--JS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
     <script src="js/rProgressbar-master/dist/js/jQuery.rProgressbar.min.js"></script>
     <script src="js/jqFuwatto.umd.js"></script>
+    <script src="js/locomotive-scroll.min.js"></script>
     <script src="js/main.js"></script>
 
 </head>
