--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             <div class="container">
                 <div class="about_box left">
                     <h3>ABOUT</h3>
-                    <img src="img/box1.png" alt="사진">
+                    <div class="img">
+                        <img src="img/box0_my.png" alt="사진">
+                    </div>
                     <ul>
-                        <li class="txt">&#34; 명언 한마디 &#34;</li>
+                        <li class="txt">&#34; 안녕하세요! &#34;</li>
                         <li></li>
                         <li>구경미</li>
                         <li>1989.11.27</li>
@@ -105,7 +107,7 @@
                     <div class="progressbar_wrap">
                         <div class="progressbar">
                             <div class="html"></div>
-                            <span>80</span>
+                            <span>85</span>
                         </div>
                         <div class="progressbar">
                             <div class="css"></div>
@@ -121,11 +123,11 @@
                         </div>
                         <div class="progressbar">
                             <div class="psd"></div>
-                            <span>70</span>
+                            <span>90</span>
                         </div>
                         <div class="progressbar">
                             <div class="ai"></div>
-                            <span>70</span>
+                            <span>85</span>
                         </div>
                         <div class="progressbar">
                             <div class="ae"></div>
@@ -146,7 +148,7 @@
                     <ul>
                         <li class="txt">베비언스 홈페이지</li>
                         <li class="txt">리뉴얼&#32;&#183;&#32;반응형</li>
-                        <li>제작기간 22.00.00 &#126; 22.00.00</li>
+                        <li>제작기간 22.02.14 &#126; 22.04.08</li>
                         <li>퍼블리싱 100%</li>
                         <li>디자인 100%</li>
                         <li>HTML / CSS / JQUERY</li>
@@ -167,8 +169,8 @@
                     <ul>
                         <li class="txt">가비아 글로벌 홈페이지</li>
                         <li class="txt">클론코딩</li>
-                        <li>제작기간 22.00.00 &#126; 22.00.00</li>
-                        <li>퍼블리싱 100%</li>
+                        <li>제작기간 22.01.10 &#126; 22.03.11</li>
+                        <li>클론코딩</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
                     <a href="web/gabiacns/index.html" target="_blank">페이지보기</a>
@@ -182,17 +184,16 @@
                 <div class="work3_box left">
                 <h3>WORK3</h3>
                 <div class="img">
-                    <img src="img/box1.png" alt="사진">
+                    <img src="img/box3_komos.png" alt="사진">
                 </div>
                 <ul>
                     <li class="txt">수업용 홈페이지</li>
-                    <li class="txt">리뉴얼&#32;&#183;&#32;반응형</li>
-                    <li>제작기간 22.00.00 &#126; 22.00.00</li>
-                    <li>퍼블리싱 100%</li>
-                    <li>디자인 100%</li>
+                    <li class="txt">&#32;&#183;&#32;반응형</li>
+                    <li>제작기간 21.01.10 &#126; 22.03.11</li>
+                    <li>클론코딩</li>
                     <li>HTML / CSS / JQUERY</li>
                 </ul>
-                <a href="web/babience/index.html" target="_blank">페이지보기</a>
+                <a href="web/komsco/index.html" target="_blank">페이지보기</a>
                 <div class="line5"></div>
                 </div> <!-- //work3_box  -->
             </div> <!-- //container  -->
@@ -207,9 +208,9 @@
                     </div>
                     <ul>
                         <li class="txt">수업용 홈페이지</li>
-                        <li class="txt">클론코딩</li>
-                        <li>제작기간 22.00.00 &#126; 22.00.00</li>
-                        <li>퍼블리싱 100%</li>
+                        <li class="txt"></li>
+                        <li>제작기간 21.12.13 &#126; 22.02.25</li>
+                        <li>클린코딩</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
                     <a href="web/jiran/index.html" target="_blank">페이지보기</a>
