--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
                         <li class="txt">가비아 글로벌 홈페이지</li>
                         <li class="txt">클론코딩</li>
                         <li>제작기간 22.01.10 &#126; 22.03.11</li>
-                        <li>클론코딩</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
                     <a href="web/gabiacns/index.html" target="_blank">페이지보기</a>
@@ -188,9 +187,8 @@
                 </div>
                 <ul>
                     <li class="txt">수업용 홈페이지</li>
-                    <li class="txt">&#32;&#183;&#32;반응형</li>
+                    <li class="txt">클론코딩&#32;&#183;&#32;반응형</li>
                     <li>제작기간 21.01.10 &#126; 22.03.11</li>
-                    <li>클론코딩</li>
                     <li>HTML / CSS / JQUERY</li>
                 </ul>
                 <a href="web/komsco/index.html" target="_blank">페이지보기</a>
@@ -208,9 +206,8 @@
                     </div>
                     <ul>
                         <li class="txt">수업용 홈페이지</li>
-                        <li class="txt"></li>
+                        <li class="txt">클론코딩&#32;&#183;&#32;반응형</li>
                         <li>제작기간 21.12.13 &#126; 22.02.25</li>
-                        <li>클린코딩</li>
                         <li>HTML / CSS / JQUERY</li>
                     </ul>
                     <a href="web/jiran/index.html" target="_blank">페이지보기</a>
