--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <li class="txt">가비아 글로벌 홈페이지</li>
                         <li class="txt">클론코딩</li>
                         <li>제작기간 22.01.10 &#126; 22.03.11</li>
-                        <li>HTML / CSS / JQUERY</li>
+                        <li>HTML / CSS</li>
                     </ul>
                     <a href="web/gabiacns/index.html" target="_blank">페이지보기</a>
                     <div class="line4"></div>
